--- a/ML_Lab4.ipynb
+++ b/ML_Lab4.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_Lab4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOKDha8+xA+CI1ITK5oM5bQ",
+      "authorship_tag": "ABX9TyPmLzniuZYSEBiEQt9/3XWU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "\n",
         "data = pd.read_csv(\"https://raw.githubusercontent.com/dhruvpathak1/machine_learning/main/summary_of_weather.csv\")"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -53,12 +53,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DnLzFe7ZzhoX",
-        "outputId": "9f389de5-5231-42db-9d68-8546e4863f94"
+        "outputId": "b3701daa-f05e-4afc-c3e4-d9d8bb753cb4"
       },
       "source": [
         "data.shape"
       ],
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -67,10 +67,8 @@
               "(821, 23)"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
+          "metadata": {},
+          "execution_count": 8
         }
       ]
     },
@@ -81,12 +79,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oiRL3xNGzp9L",
-        "outputId": "7687026d-5e50-48a2-98f5-d28b5a557b19"
+        "outputId": "4779b76c-daf4-4d46-e27f-29184511e7a7"
       },
       "source": [
         "data.info()"
       ],
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,14 +131,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xo6YL9L8zvKO",
-        "outputId": "5ca5ce5c-ad5e-48c8-b18c-254e8a536d7b"
+        "outputId": "f6d942a9-541e-4e88-85cf-5b4d6b0c6741"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "lm = LinearRegression()\n",
         "lm"
       ],
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,10 +147,8 @@
               "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     },
@@ -163,7 +159,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3HY9n7SPz4Zg",
-        "outputId": "28cbe1ba-dd60-40f9-af39-1aac88ba2b8a"
+        "outputId": "20fd4ca8-f45f-43d1-90db-49cef56aa65a"
       },
       "source": [
         "X = data[['MIN']]\n",
@@ -172,7 +168,7 @@
         "lm.fit(X,Y)\n",
         "# training data is passed to fit method"
       ],
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,10 +177,8 @@
               "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     },
@@ -195,13 +189,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "38djvYcX0IgZ",
-        "outputId": "70bd81e4-faff-4fb0-cefe-c273e9011eb7"
+        "outputId": "2da1fa81-add6-4022-b594-16c860729b3d"
       },
       "source": [
         "Yhat=lm.predict(X)\n",
         "Yhat[0:10]"
       ],
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,10 +205,8 @@
               "       85.16045518, 87.14619224, 86.15332371, 87.14619224, 85.16045518])"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     },
@@ -226,7 +218,7 @@
           "height": 279
         },
         "id": "NtZkIAc-0MnJ",
-        "outputId": "09976653-9198-464f-a593-a0c84bb747b0"
+        "outputId": "e506e1ed-54c8-4e0d-aed0-8933a40b3bf2"
       },
       "source": [
         "# plot regression model\n",
@@ -237,7 +229,7 @@
         "plt.ylabel('MAX')\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -248,7 +240,6 @@
             ]
           },
           "metadata": {
-            "tags": [],
             "needs_background": "light"
           }
         }
@@ -261,13 +252,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nvHZkTkX0X-k",
-        "outputId": "1e4b3e44-711d-4088-f9eb-c5646711f457"
+        "outputId": "5bd767ac-1148-4f3d-ff59-d295752b7504"
       },
       "source": [
         "print(lm.intercept_)\n",
         "print(lm.coef_)"
       ],
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +277,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H8o4sBKd49Dw",
-        "outputId": "2e3f1f32-db5a-44ea-b88c-a8ec78b8f1a9"
+        "outputId": "476c4973-bded-4853-fc36-bc46c8164365"
       },
       "source": [
         "from sklearn.metrics import mean_squared_error, r2_score\n",
@@ -298,7 +289,7 @@
         "print('Root mean squared error: ', rmse)\n",
         "print('R2 score: ', r2)"
       ],
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +309,7 @@
       "source": [
         "X=X.iloc[:,0] "
       ],
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -328,7 +319,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DxrLkErI1ohp",
-        "outputId": "67e3158a-d412-41ec-9d50-94e9daac6264"
+        "outputId": "1efe90f5-6f85-4fec-a147-e58eee8ed6c0"
       },
       "source": [
         "# Building the model\n",
@@ -350,7 +341,7 @@
         "    \n",
         "print (m, c)"
       ],
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +360,7 @@
           "height": 265
         },
         "id": "xPRvqlvx-6U0",
-        "outputId": "da50beda-85ff-483d-8a0f-835b143c2426"
+        "outputId": "fb9bc2ab-9ab2-43dc-cbc9-a31e929b4f6f"
       },
       "source": [
         "# Making predictions\n",
@@ -379,7 +370,7 @@
         "plt.plot([min(X), max(X)], [min(Y_pred), max(Y_pred)], color='red')  # regression line\n",
         "plt.show()"
       ],
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -390,9 +381,75 @@
             ]
           },
           "metadata": {
-            "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8PQVxzS42Jws"
+      },
+      "source": [
+        "from sklearn.linear_model import Lasso, Ridge\n",
+        "from sklearn.model_selection import train_test_split"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "33rDqUgx2VQ9",
+        "outputId": "af624c49-c786-4242-bbed-dce2213630fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "X = data[['MIN']][0:400]\n",
+        "Y = data['MAX'][0:400]\n",
+        "x_train,x_test,y_train,y_test= train_test_split(X,Y,test_size=0.4, random_state=42)\n",
+        "model_lasso=Lasso(alpha=0.01)\n",
+        "model_lasso.fit(x_train, y_train)\n",
+        "predictions= model_lasso.predict(x_test)\n",
+        "print(\"R2 Lasso\", r2_score(y_test, predictions))"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "R2 Lasso 0.19087164662923894\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uyCLsukv3joz",
+        "outputId": "5b6c404a-de8f-49dc-c0ed-ccbe17d49cd4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model_ridge=Ridge(alpha=0.01)\n",
+        "model_ridge.fit(x_train, y_train)\n",
+        "predictions= model_ridge.predict(x_test)\n",
+        "print(\"R2 ridge\", r2_score(y_test, predictions))"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "R2 ridge 0.19096747791538837\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
